Добавлена логика бронирования
